[project]
name = "portal-particle-extraction"
version = "0.1.0"
description = "Subtomogram extraction from local files and the CryoET Data Portal"
authors = [{ name = "Daniel Ji" }, { name = "Utz Ermel" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click",
  "copick",
  "cryoet_alignment",
  "cryoet_data_portal",
  "dask",
  "mrcfile",
  "numpy",
  "pandas",
  "pytest",
  "s3fs",
  "scipy",
  "starfile",
  "tqdm",
]
[project.optional-dependencies]
dev = ["pre-commit", "ruff", "black", "matplotlib", "seaborn"]
pipeliner = ["pipeliner @ git+https://gitlab.com/ccpem/ccpem-pipeliner.git"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portal-particle-extraction = "portal_particle_extraction.subtomo_extract:cli"