[project]
name = "zarr-particle-tools"
version = "0.1.0"
description = "Subtomogram extraction from local files and the CryoET Data Portal"
authors = [{ name = "Daniel Ji" }, { name = "Utz Ermel" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click",
  "copick",
  "cryoet_alignment",
  "cryoet_data_portal",
  "dask",
  "mrcfile",
  "numpy",
  "pandas",
  "pytest",
  "s3fs",
  "scipy",
  "starfile",
  "tqdm",
]
[project.optional-dependencies]
dev = ["pre-commit", "ruff", "black", "matplotlib", "seaborn"]
pipeliner = ["pipeliner @ git+https://gitlab.com/ccpem/ccpem-pipeliner.git"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zarr-particle-extract = "zarr_particle_tools.subtomo_extract:cli"
zarr-particle-reconstruct = "zarr_particle_tools.subtomo_reconstruct:cli"

[project.entry-points."ccpem_pipeliner.jobs"]
"zarrparticletools.pseudosubtomo" = "zarr_particle_tools.pipeliner.subtomo_extract_pipeliner_job:PythonRelionPseudoSubtomoJob"
"zarrparticletools.reconstruct" = "zarr_particle_tools.pipeliner.subtomo_reconstruct_pipeliner_job:PythonRelionSubtomoReconstructJob"